trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* ... */
.activityStreamReplyFooter
{
	margin-bottom: 5px;
	margin-top: .5em;
	text-align: right;
	width: 450px;
}

.activityStreamReplyBtn
{
	background: #949494 none repeat scroll 0 0;
	color: #FFFFFF;
	cursor: pointer;
	font-size: 12px;
	margin-right: 3px;
	padding: 2px 10px;
}

.shareThisRecipientTablePanel
{
	width: 315px;
}

.shareThisRecipientTablePanelHeight, .shareThisMyTeamsPanelHeight
{
	height: 100px;
	overflow: auto;
}

.shareThisRecipientTable
{
	width: 100%;
}

.shareThisTextAreaBorder
{
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
}

.shareThisCommentsLabel, .shareThisShareWithTeamsLabel, .groupMembershipGroupNameLabel
{
	font-size: 12px;
	font-weight: bold;
	padding-top: 8px;
}

.shareThisShareWithTeamsPanel
{
	padding-top: 10px;
}

.unreadEntry
{
	font-weight: bold;
	font-size: 13px;
}

.readEntry
{
}

.unreadImg
{
	cursor: pointer;
	padding-right: 2px;
	vertical-align: middle;
}

.groupMembershipPopup
{
	font-size: 14px;
	background-color: #EBECA5;
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
	padding: 5px 10px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	z-index: 1100;
}

.closeGroupMembershipPopupImg
{
	cursor: pointer;
	position: absolute;
	right: 10px;
	top: 5px;
}

.groupMembershipTablePanel
{
	width: 315px;
}

.groupMembershipTablePanelHeight
{
	height: 150px;
	overflow: auto;
}

.groupMembershipTable
{
	width: 100%;
}

.displayInline
{
	display: inline;
}

.level1Comment
{
	margin-left: 40px;
}

.verticalAlignTop
{
	vertical-align: top;
}

/* The following two styles are used to prevent an entry's description from starting */
/* on a new line in the activity stream control. */
.activityStreamEntryDesc > p
{
	margin: 0px;
	padding-right: 3px;
}

.activityStreamEntryDesc > div
{
	margin: 0px;
	padding-right: 3px;
}

/* ########################################################################################################### */

/* general styles to override the GWT standard.css file */

a, a:visited, a:hover {
	color: #135c8f !important;
	}
	
/* Style used for the AdminActionControl. */
.adminActionControl
{
	margin: 5px;
	padding: 2px;
}

.adminActionControlMouseOver
{
	background: #E6F2F7;
	color: #3E6978;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}

/* Style used for the AdminActionsTreeControl found in Teaming's administration page. */
.adminActionsTreeControl
{
	left: 8px;
	background-color: #EAEBE8;
	padding: 0 0 8px;
	position: absolute;
	overflow-y: auto;
	overflow-x: hidden;
	top: 8px;
	z-index: 100;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

/* Style used for the header in the AdminActionsTreeControl */
.adminActionsTreeControlHeader
{
	background: #85BCC3 url(images/header_blend_grey_bg.png) repeat-x scroll center bottom;
	background-position:bottom;
	color: #fff;
	font-size: 0.85em;
	font-weight: bold;
	letter-spacing: 0.02em;
	-moz-border-radius-topleft: 5px;
	-moz-border-radius-topright: 5px;
	-webkit-border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
}

/* Style used for the header in the AdminActionsTreeControl */
.adminActionsTreeControlHeader2
{
	margin: 5px;
}

/* Style used for the table that holds all the administration categories. */
.adminCategoriesTable
{
}

/* Style used with the category name. */
.adminCategoryName
{
	font-weight: bold;
}

/* Style used for the panel that holds the administration content control. */
.adminContentControl
{
	position: absolute;
	top: 8px;
	background-color:#fff;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

/* Style used for the iframe in the content control that holds the administration content. */
.adminContentControl iframe.gwt-Frame
{
	border-width: 0px;
}

body, table td, select
{
	font-family: Arial, Helvetica, sans-serif;
}

.n-Label /* Novell - for text input field, radio buttons, and checkbox labels */
{
	font-size: 0.85em;
	color: #666;  /* gray */
	text-transform: capitalize;
}

.n-Transparent-Black-Div
{
	background: url(images/trans50_black.png) repeat; overflow: hidden; z-index: 1000;
}

.bold
{
	font-weight: bold;
}

.bulletListItem
{
	margin-left: 1em;
}

.smalltext  { color: black; font-size: 0.75em;  line-height: 1em;   }
.mediumtext { color: black; font-size: 0.85em;  line-height: 1.1em; }
.largetext  { color: black; font-style: normal; line-height: 1.1em; font-weight: normal; font-size: 1em; }

.margintop1 { margin-top: 0.3em }
.margintop2 { margin-top: 0.5em }
.margintop3 { margin-top: 1em   }
.marginleft1   { margin-left: 1em }
.marginleft2   { margin-left: 2em }
.marginleft2px { margin-left: 2px }
.marginleft3   { margin-left: 3em }
.marginleft4   { margin-left: 4em }
.marginleft5px { margin-left: 5px }
.marginbottom1 { margin-bottom: 0.3em }
.marginbottom2 { margin-bottom: 0.5em }
.marginbottom3 { margin-bottom: 1em }
.marginright2px { margin-right: 2px }
.marginright10px { margin-right: 10px; }

/* Style used for the panel that holds the content in the "color picker" dialog. */
.colorPickerContentPanel
{
	height: 270px;
	overflow: auto;
	width: 300px;
}

/* Styles for a td that holds a color name or hex value in the "color picker" dialog. */
.colorPickerColorNameTD, .colorPickerHexValueTD
{
	background-color: #FFFFFF;
	border-bottom: 1px solid #D2D5D1;
	cursor: pointer;
	font-size: 0.75em;
	padding: 3px 8px;
	white-space: nowrap;
}

/* Style for a span that holds a color's hex value. */
.colorPickerHexValueSpan
{
	background-color: #F0F8FF;
	border: 1px dotted #BABDB6;
	display: inline-block;
	height: 14px;
	margin: 5px;
	vertical-align: middle;
	width: 14px;
}

/* Styles for the row that holds the header in the table that holds the colors in the "color picker" dialog. */
.colorPickerHeaderTR
{
	background: transparent url("images/blends/gray_blend8_28.png") repeat-x scroll center;
	color: #505354;
	font-size: 0.8em;
	height: 24px;
	padding: 0.2em;
	text-align: left;
	text-indent: 0.5em;
	white-space: nowrap;
}
/* ... */

